--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,26 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+bower_components/
+
+# Build output
+dist/
+dist-ssr/
+build/
+out/
+
+# Local environment files
 *.local
+.env
+.env.*.local
+
+# Cache and temp files
+.cache/
+.vite/
+coverage/
+*.tsbuildinfo
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +38,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+Thumbs.db
